--- a/public/a3/index.css
+++ b/public/a3/index.css
@@ -257,7 +257,7 @@ p#id-selector-2 {
 .gradients-positioned {
     background:
             radial-gradient(
-                    at top right, darkslategray, coral);
+                    at top right, darkslategray,lightcoral);
     width: 200px;
     height: 200px;
     color: white;
